2002-09-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Guessing 'npc_nearby2()'.  Fixes
	Moonshade bug where companions don't show up to the trial.

2002-09-21  Jeff Freedman  <jeff@amy.nerble.net>

	* pathfinder/*:  GetNextStep returns a 'done' flag if the tile
	returned is the last in the path.
	* actions.cc:  Check for last step & return 0 if so.

2002-09-19  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Moved the 'no_halt' test to
	start().
	* schedule.cc:  Patrol schedule:  Look for path after executing
	Usecode, and keep going after sitting.  This fixes Freedom bug
	where the automaton doesn't talk to you upon arrival.
	* schedule: Don't follow Avatar if paralyzed.

2002-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Taking a guess to fix the 'savegump repaint' bug.
	* drag.cc (Dragging_info): If not dragging, don't paint!

2002-09-13  Jeff Freedman  <jeff@amy.nerble.net>

	* keyactions.cc,etc: USEFOOD added to support SI goblet.
	* gamewin.cc:  activate_item() now returns true/false.

2002-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: In BG, get_shape_real() should only return the normal
	2 possible shapes for the Avatar.

2002-09-11  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated and/or spellchecked
	* docs/*.html, exult_studio.txt: updated and/or spellchecked
	* FAQ, ReadMe : updated and spellchecked

2002-08-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: reverted click_on_item change from 2002-08-02
	(it broke hitting Draygan with sleep arrows)
	* intrinsics.cc: restored mentioned change, but for the avatar only

2002-08-27  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc:  It's now okay to show rain/clouds when gumps are shown.
	* tqueue.cc: Got to fix time when tqueue is paused (like when
	gumps are open).
	* gumps/Spellbook_gump.cc:  Close all gumps after casting spell.